[package]
name = "AngularColorMapping"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.14"
winit = "0.28"
num-complex = "0.4"

[profile.release]
strip = "debuginfo"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
codegen-units = 32
incremental = true
